texto adicionado e font modificada

--- a/index.html
+++ b/index.html
@@ -2,11 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algoristmos</title>
+    <title>Algoritmos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Algoristmos</h1>
+<center>
+    <h1>sobre o algoritmos</h1>
 
+    <p>
+        Os algoritmos são sequências de passos bem definidos para resolver problemas ou realizar <br> tarefas. Eles são essenciais na programação, pois fornecem uma abordagem estruturada para <br> resolver problemas. Algoritmos precisam ser precisos, finitos, ter entradas e saídas definidas e <br> ser eficientes. Eles são usados em diversas áreas, como ordenação de listas, busca de dados e <br> redes neurais em inteligência artificial. Compreender a complexidade de tempo e espaço dos <br> algoritmos é crucial para otimizar o desempenho.
+    </p>
+
+    <h1>Explicação Detalhada:</h1>
+
+    <p>
+        Algoritmos são como receitas para programadores. Eles são conjuntos de instruções que dizem <br> ao computador exatamente o que fazer. Imagine que você está desenvolvendo um aplicativo e <br> precisa ordenar uma lista de itens. Você escolheria um algoritmo de ordenação, como o QuickSort, <br> que define claramente como rearranjar os itens para que fiquem em ordem.
+    </p>
+
+    <p>
+        A precisão é fundamental. Cada passo no algoritmo precisa ser claro e sem ambiguidade. A <br>finitude garante que o algoritmo terminará em algum momento, evitando loops infinitos. As <br> entradas e saídas definidas são como os ingredientes e o prato final na receita. Você precisa saber <br>o que está indo para o algoritmo e o que esperar dele.
+    </p>
+
+    <p>
+        Algoritmos são a espinha dorsal da programação. Ao lidar com grandes conjuntos de dados, a eficiência <br> se torna crucial. Pense em algoritmos como ferramentas: você escolhe a ferramenta certa para a tarefa <br>erta. Se estiver lidando com uma lista grande, escolher um algoritmo eficiente, como o MergeSort, <br> pode economizar muito tempo de processamento.
+    </p>
+
+    <p>
+        Algoritmos também são a base da inteligência artificial. Ao construir redes neurais, você está essencialmente projetando <br> algoritmos que aprendem com os dados. Isso pode envolver algoritmos complexos, mas a ideia fundamental permanece <br> a mesma: sequências de passos que resolvem um problema.
+    </p>
+
+    <p>
+        Ao programar, você constantemente enfrentará desafios de otimização. Analisar a complexidade de tempo e espaço de um algoritmo ajuda a escolher a melhor abordagem para a eficiência. Em última análise, os algoritmos capacitam os programadores a transformar ideias em código funcional, permitindo que os computadores executem tarefas de maneira rápida e eficiente.
+    </p>
+</center>
 </body>
 </html>
